# pzs-ng

./: .gitignore  BUGS  CHANGELOG  COOKIES  ChangeLog  FAQ  INSTALL  INSTALL.cuftpd  Makefile.am  Makefile.in  README  README.AMD64  README.NEW  README.ZSCONFIG  README.datacleaner  README.sitewho  TEST  TODO  UPDATING  acconfig.h  aclocal.m4  autogen.pl  autogen.sh  config.h.in  configure  configure.in  ng-install.sh  project-zs-ng_v1.0_rc2_r1602.tgz  update_ng-version.sh  version.sh
scripts/psxc-media/MediaInfo/Project/GCC/GUI/: Makefile.in  Makefile.mingw32  configure.ac
sitebot/: CHANGELOG  CHECKLIST  COOKIES  Makefile.am  README  UPDATING  avizion.zst  bnccheck.tcl  classic.zst.dist.broken  cookie-parsing.tcl  cookies-file-generator.tcl  cookies-update.tcl  dZSbconf.defaults.tcl  dZSbconf.dist.tcl  dZSbconf.tcl  dZSbconf.tcl.dist  dZSbot.conf.defaults  dZSbot.conf.dist  dZSbot.help  dZSbot.tcl  dZSbot.vars  dZSbvars.tcl  dZSbvars.tcl.dist  default.zst  default.zst.dist  extra.tgz  ngBot.conf.defaults  ngBot.conf.dist  ngBot.help  ngBot.tcl  ngBot.vars  ngbot.tcl  pink.zst  psxc.zst
sitebot/extra/: Makefile  bnc-check-alternative.pl  bnc-check-hacked.pl  bnc-check.pl  bnctest.sh  fakelog.sh  incomplete-list.sh  invite.sh  ng-bandwidth  ng-bw  ng-bw.c  ng-topic.sh  passchk  passchk.c  top.tcl  weektop.sh
sitebot/modules/: cuftpd.tcl  example.tcl  glftpd.tcl
sitebot/not_working/: psxc.zst.broken
sitebot/not_working/ngplugins/: ng_parsefile.tcl
sitebot/obsolete/: ngbot.tcl  pink.zst.broken
sitebot/plugins/: AutoIRCFlag.tcl  AutoOp.tcl  Blow.tcl  Blow.zpt  DeluserBan.tcl  Example.tcl  Example.zpt  GameFAQs.tcl  GameFAQs.zpt  GrpTop.tcl  NickDb.tcl  PreTime.tcl  README  TVMaze.tcl  TVMaze.zpt  TVRage.tcl  TVRage.zpt  Top.tcl  fishwrap.py
sitebot/src/: Makefile  Makefile.am  Makefile.in  dl_speedtest.c  glwho.c  ng-bw.c  passchk-old.c  passchk.c  showlog.c  structonline.h
sitebot/themes/: classic.zst  d3x0c.zst  dakrer.zst  default.zst  icefury.zst  liquid.zst  nfs.zst  psxc.zst  vampire.zst  wshadow.zst
sitebot/themes/broken/: icefury.zst  nfs.zst  psxc.zst
src/sitebot/: Makefile.am  README  dZSbot.conf.defaults  dZSbot.tcl
src/sitebot/extra/: top.tcl
src/sitebot/obsolete/: weektop.sh
src/sitebot/plugins/: DeluserBan.tcl  PreTime.tcl
src/sitewho/: Makefile.am  Makefile.in  sitewho.c  sitewho.conf.in  sitewho.h
src/zipscript/: Makefile.am  avinfo.c  cleanup.c  cleanup.h  complete.c  constants.h  convert.c  datacleaner.c  datacleaner.h  errors.h  glstructs.h  handle_nfo.h  handle_sfv.c  handling.h  helpfunctions.c  helpfunctions.h  macros.h  makezsconfreadme.sh  mp3info.c  mp3info.h  ng-chown.c  ng-undupe.c  ng-version.h  objects.h  postdel.c  processfuncs.c  processfuncs.h  race-file.c  race-file.h  racestats.c  racetypes.c  racetypes.h  rescan.c  stats.c  zipscript-c.c  zsconstants.h  zsfunctions.c  zsfunctions.h
src/zipscript/include/: audio.h  handling.h  postdel.h  racetypes.h  strsep.h  video.h
src/zipscript/src/: Makefile.in  complete.c  handle_nfo.c  multimedia.c  ng-version.c  race-file.c  stats.c  zipscript-c.c
src/zipscript/utils/: racedatatest.c  sfvdatatest.c
trunk/: BUGS  CHANGELOG  COOKIES  FAQ  LICENSE  Makefile.in  README  README.AMD64  README.ZSCONFIG  README.mp3-genres  TODO  UPDATING  configure  configure.in  ng-install.sh
trunk/configGen/: config.yaml  configGen.rb
trunk/lib/strl/: strlcpy.c
trunk/scripts/cleaner/: README
trunk/scripts/debug_checker/: debug_checker.sh
trunk/scripts/libcopy/: libcopy.sh
trunk/scripts/logtrimmer/: README
trunk/scripts/mp3-genre/: README
trunk/scripts/nfoextract/: nfoextract.sh
trunk/scripts/precheck/: pre_check.tcl
trunk/scripts/psxc-imdb/: CHANGELOG  FAQ  FILES  README  README.installer  README.psxc-imdb-dotimdb  README.use.of.special.format  TODO  UPGRADING
trunk/scripts/psxc-imdb/addons/: psxc-imdb-dotimdb.pl  psxc-imdb-nuker.sh  psxc-symlink-maker.sh
trunk/scripts/psxc-imdb/extras/: psxc-imdb-find.sh  psxc-imdb-rescan.sh  psxc-imdb-sanity.sh
trunk/scripts/psxc-imdb/main/: psxc-imdb.conf  psxc-imdb.sh  psxc-imdb.tcl
trunk/scripts/psxc-imdb/other/: makeclean.sh  makediff.sh  psxc-depcheck_v0.1.tgz  stripcr.sh
trunk/scripts/psxc-media/: compile.sh  psxc-genreconvert.c  psxc-media.sh
trunk/scripts/psxc-media/MediaInfo/: History.CLI.txt
trunk/scripts/psxc-media/MediaInfo/Project/MSVC/: MediaInfo.sln
trunk/scripts/psxc-media/MediaInfo/Release/: Release_CLI_Linux_FromSource.bat  Release_CLI_MacIntel.sh  Release_CLI_Win32.bat  Release_Source.bat
trunk/scripts/psxc-media/MediaInfo/Source/CLI/: Config.h  Help.h  (+2 more)
trunk/scripts/psxc-media/MediaInfoLib/Release/: Release_DLL_Win32.bat  Release_Lib_MSVC.bat  Release_Source.bat
trunk/scripts/psxc-media/ZenLib/Release/: Release_MSVC.bat
trunk/sitebot/: COOKIES  UPDATING  dZSbot.conf.defaults  dZSbot.conf.dist  dZSbot.help  dZSbot.tcl  dZSbot.vars
trunk/sitebot/extra/: fakelog.sh  incomplete-list.sh  ng-topic.sh  top.tcl
trunk/sitebot/plugins/: Blow.tcl  GameFAQs.tcl  GameFAQs.zpt  NickDb.tcl  PreTime.zpt  README  TVRage.tcl
trunk/sitebot/src/: Makefile.in  dl_speedtest.c  passchk.c  showlog.c
trunk/sitebot/themes/: classic.zst  d3x0c.zst  dakrer.zst  default.zst  liquid.zst  nfs.zst
trunk/sitewho/: CHANGELOG  Makefile.in  sitewho.c  sitewho.conf.in  sitewho.h  structonline.h
trunk/sitewho/obsolete/: bandwidth.sh
trunk/zipscript/conf/: zsconfig.h.all.sh  zsconfig.h.complete  zsconfig.h.dist
trunk/zipscript/include/: audio.h  constants.h  constants.json.h  constants.ss5.h  convert.h  errors.h  ng-chown.h  ng-version.h  objects.h  postdel.h  print_config.h  race-file.h  stats.h  video.h  zsconfig.defaults.h  zsfunctions.h
trunk/zipscript/src/: Makefile.in  audiosort-bin.c  audiosort.c  avinfo.c  cleanup.c  complete.c  convert.c  datacleaner.c  dizreader.c  helpfunctions.c  mp3info.c  multimedia.c  ng-chown.c  ng-undupe.c  ng-version.c  postdel.c  postunnuke.c  print_config.c  race-file.c  racestats.c  rescan.c  stats.c  zipscript-c.c  zsfunctions.c
trunk/zipscript/utils/: headdatatest.c  sfvdatatest.c
(+602 files in other folders)
