AC_INIT(src)
AC_PREFIX_DEFAULT(/glftpd)
AC_PROG_CC()
AC_LANG_C()

AC_ARG_PROGRAM()
AC_PROG_MAKE_SET()
AC_PROG_INSTALL()

AM_INIT_AUTOMAKE(project-zs-ng, 1.0)
AM_DISABLE_SHARED()
AM_PROG_LIBTOOL()
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE()

AC_PATH_PROG(ACLOCAL, aclocal)
AC_PATH_PROG(AUTOCONF, autoconf)
AC_PATH_PROG(AUTOMAKE, automake)
AC_PATH_PROG(AUTOHEADER, autoheader)

AC_CHECK_HEADERS(limits.h syslimits.h sys/limits.h)

AC_CHECK_FUNC(strlcpy, AC_DEFINE(HAVE_STRLCPY, 1, [Define to 1 if you have the strlcpy() function available]))
AM_CONDITIONAL(DONT_HAVE_STRLCPY, test "$ac_cv_func_strlcpy" = no)
AC_CHECK_FUNC(strsep, AC_DEFINE(HAVE_STRSEP, 1, [Define to 1 if you have the strsep() function available]))
AM_CONDITIONAL(DONT_HAVE_STRSEP, test "$ac_cv_func_strsep" = no)
AC_CHECK_FUNC(scandir, AC_DEFINE(HAVE_SCANDIR, 1, [Define to 1 if you have the scandir() function available]))
AM_CONDITIONAL(DONT_HAVE_SCANDIR, test "$ac_cv_func_scandir" = no)

dnl check if SSL is available
AH_TEMPLATE([PZSNG_SSL_EXT], [Define to 1 to if you have the required SSL libraries in place])
PZSNG_SSL()

AM_CONDITIONAL(HAVE_SSL, test -n "$SSL_LIBS")

dnl sitestat5
AC_ARG_ENABLE(ss5, AS_HELP_STRING([--enable-ss5], [compiles the zipscript for use with SiteStat 5]), [
	CFLAGS="$CFLAGS -D_WITH_SS5"
	! [[ -f zipscript/conf/zsconfig.h ]] && cp -i zipscript/conf/zsconfig.h.ss5.dist zipscript/conf/zsconfig.h
	]
)

NOFORMAT="-D_WITH_NOFORMAT"
AC_ARG_ENABLE(format, AS_HELP_STRING([--enable-format], [compiles the zipscript to format the output]), NOFORMAT="")

ALTWHO="-D_WITH_ALTWHO"
AC_ARG_ENABLE(altwho, AS_HELP_STRING([--disable-altwho], [compiles the sitewho to not use an alternative output on single user who lookups]), ALTWHO="")

! [[ -f src/zipscript/zsconfig.h ]] && cp -i src/zipscript/zsconfig.h.dist src/zipscript/zsconfig.h

AC_SUBST(NOFORMAT)
AC_SUBST(ALTWHO)
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(
Makefile
src/Makefile
src/zipscript/Makefile
src/glufile/Makefile
src/showlog/Makefile
src/sitewho/Makefile
src/sitewho/sitewho.conf
src/utils/Makefile
sitebot/Makefile
)
