EXTRA_DIST = \
	COOKIES \
	cookies-update.tcl \
	dZSbot.conf.defaults \
	dZSbot.conf.dist \
	dZSbot.help \
	dZSbot.tcl \
	dZSbot.vars \
	README \
	UPDATING \
	extra/fakelog.sh \
	extra/incomplete-list.sh \
	extra/invite.sh \
	extra/top.tcl \
	plugins/DeluserBan.tcl \
	plugins/NickDb.tcl \
	plugins/PreTime.tcl \
	plugins/README \
	themes/classic.zst \
	themes/dakrer.zst \
	themes/default.zst \
	themes/psxc.zst \
	themes/vampire.zst
	themes/broken/icefury.zst \
	themes/broken/nfs.zst
