SUBDIRS = src

extra_DIST = \
	extra/incomplete-list.sh \
	extra/fakelog.sh \
	extra/invite.sh \
	extra/top.tcl \
	obsolete/ngplugins/ng_parsefile.tcl \
	obsolete/incomplete-list-old.sh \
	obsolete/cookie-parsing.tcl \
	obsolete/bnccheck.tcl \
	obsolete/ngbot_conf.tcl \
	obsolete/ngbot.tcl \
	obsolete/weektop.sh \
	plugins/DeluserBan.tcl \
	plugins/NickDb.tcl \
	plugins/PreTime.tcl \
	plugins/README \
	themes/broken/icefury.zst \
	themes/broken/nfs.zst \
	themes/classic.zst \
	themes/dakrer.zst \
	themes/default.zst \
	themes/psxc.zst \
	themes/vampire.zst \
	cookies-update.tcl \
	dZSbot.conf.dist \
	COOKIES \
	README \
	UPDATING \
	dZSbot.conf.defaults \
	dZSbot.help \
	dZSbot.tcl \
	dZSbot.vars
